# ysyx

./: Makefile
abstract-machine/klib/include/: klib.h
abstract-machine/klib/src/: stdio.c  stdlib.c  string.c
abstract-machine/scripts/platform/: nemu.mk  npc.mk
chisel/: .gitignore  Makefile  build.mill  ps2Sim.sv
nemu/: .gitignore  Kconfig  Makefile
nemu/include/: common.h  isa.h
nemu/include/cpu/: cpu.h  decode.h
nemu/include/utils/: logRingBufferLib.h  (+1 more)
nemu/scripts/: native.mk
nemu/test/: generateExp.sh  randomExpression.c  testTarget.sh  yemu.c
npc/: .gitignore  CMakeLists.txt  Makefile  nvboard  sim_main.cpp
npc/csrc/: displayCodecTop_sim_main.cpp  npc_sim_main.cpp  ps2Connecter_sim_main.cpp  ps2Display_sim_main.cpp  streamingLight_sim_main.cpp
npc/csrc/module/: reg.c
npc/csrc/module/device/: mmio.c  serial.c  timer.c
npc/csrc/module/difftest/: diiftest.c
npc/csrc/module/sdb/: expr.c  sdb.c  watchpoint.c
npc/csrc/module/util/: argsParser.c  elfParser.c  logRingBufferLib.c  logStackLib.c
npc/include/: argsParser.h  macro.h  npc.h  reg.h
npc/include/device/: mmio.h
npc/include/difftest/: diiftest.h
npc/include/sdb/: sdb.h
npc/include/utils/: elfParser.h  logRingBufferLib.h  logStackLib.h
npc/vsrc/: codecTop.sv  displayCodecTop.sv  helloChiselTop.sv  npc.sv  our.v  ps2Connecter.sv  ps2Display.sv  selectorTop.sv  singleALUTop.sv  streamingLightTop.sv
npc/vsrc/npc/: csrGroup.sv  dataMemory.sv  decoder.sv  finishSim.sv  immExtender.sv  multALU.sv  npc.sv  regGroup.sv  singleALU.sv  systemDecoder.sv
npc_bak/: Makefile
(+80 files in other folders)
